# dde

./: .gitignore  .ocamlformat  AUTHORS  CITATION.cff  Dockerfile  README.md  dde.opam  dune-project  dune-workspace  graph0.dot  overview.md  test.smt
.github/workflows/: build.yml
build_scripts/: debugutils.ml  dune  gen_version.sh  interpreter.ml
extract_stats/: dune  extract_stats.ml  stats.txt
extract_stats/results/: experiment=monovariant--case=ack--analysis=ddpa--k=0--2023-10-13T14:40:39-04:00.txt  experiment=monovariant--case=ack--analysis=ddpa--k=0--2023-10-13T14:46:37-04:00.txt
formal/: Core.v  Makefile  Makefile.conf  Maps.v  README.md  _CoqProject  dune
formal/Abstract/: AllPaths.v  Common.v  Core.v  Pure.v  dune
formal/Common/: Lang.v  Maps.v  Sets.v  Tactics.v  dune
formal/Concrete/: Core.v  Env.v  dune
interpreter/: ddeast.ml  ddeinterp.ml  ddeoptions.ml  ddepp.ml  debugutils.ml  dune  fbdk.mli
interpreter/access_links/: ast.ml  debugutils.ml  dune  interp.ml  lexer.mll  parser.mly  pp.ml
interpreter/display/: ast.ml  debugutils.ml  dune  interp.ml  lexer.mll  parser.mly  pp.ml
interpreter/src/: ast.ml  debug_utils.ml  debugutils.ml  dune  exns.ml  fbdk.ml  fbdk.mli  interp.ml  lexer.mll  lib.ml  main.ml  parser.mly  pp.ml  type.ml
interpreter/tests/: bench.ml  benchmarks.ml  dune  tests.ml  tests_al.ml  tests_display.ml  tests_env.ml  tests_self.ml  tests_subst.ml  utils.ml
program_analysis/: debugutils.ml  dune  lib.ml  main.ml  utils.ml
program_analysis/display/: debugutils.ml  dune  grammar.ml  lib.ml  simplifier.ml  utils.ml
program_analysis/full/: debug_utils.ml  dune  exns.ml  grammar.ml  graph.ml  lib.ml  main.ml  simplifier.ml  solver.ml  utils.ml
program_analysis/reworked/: debugutils.ml  dune  grammar.ml  lib.ml  simplifier.ml  utils.ml
program_analysis/simple/: debug_utils.ml  debugutils.ml  dune  grammar.ml  lib.ml  simplifier.ml  solver.ml  utils.ml
program_analysis/smt/: test.smt  yo.smt
program_analysis/src/: debug_utils.ml  debugutils.ml  dune  grammar.ml  lib.ml  logging.ml  main.ml  simplifier.ml  solver.ml  utils.ml
program_analysis/tests/: bench.ml  church.ml  dune  pbt.ml  test_cases.ml  test_utils.ml  tests.ml  tests_prop.ml  tests_self.ml  utils.ml  verify.ml
program_analysis/tests/cases/: ack.ml  blur.ml  cpstak.ml  eta.ml  facehugger.ml  flatten.ml  kcfa-2.ml  kcfa-3.ml  kcfa2.ml  loop2-1.ml  map.ml  mj09.ml  primtest.ml  rsa.ml  sat-1.ml  sat-2.ml  sat-3.ml  sat-4.ml  sat-5.ml  tak.ml
program_analysis/tests/inputs/: ack.ml  adapted3.ml  adapted4.ml  blur.ml  church.ml  eta.ml  facehugger.ml  fact.ml  flatten.ml  kcfa2.ml  kcfa3.ml  loop2-1.ml  mack.ml  map.ml  primtest.ml  rsa.ml  sat-1.ml  sat-2.ml  sat-3.ml  tak.ml
program_analysis/tests/outputs/: loop2  loop2-1.txt  sat  sat-1.txt  sat-2.txt
program_analysis/tests/progs/: ack.ml  adapted2.ml  adapted3.ml  eta.ml  loop2.ml  mj09.ml  sat.ml  tak.ml
src/: ddeast.ml  ddeinterp.ml  ddelexer.mll  ddemonad.ml  ddeparser.mly  ddepp.ml  ddetype.ml  debugutils.ml  dune  fbdk.ml  fbdk.mli  interpreter.ml
tests/: benchmarks.ml  dune  tests.ml  tests_env.ml  tests_self.ml  tests_subst.ml  utils.ml
z3/: convert.ml  dune  test.ml  test1.smt  test2.smt  test3.smt
