(library
 (name dde)
 (wrapped false)
 (preprocess
  (pps ppx_deriving.show bisect_ppx))
 (modules
  fbdk
  debugutils
  version
  ddeast
  ddetype
  ddeinterp
  ddelexer
  ddeoptions
  ddeparser
  ddepp))

(ocamllex
 (modules ddelexer))

(menhir
 (modules ddeparser))

(executable
 (name interpreter)
 (modes byte)
 (modules interpreter)
 (preprocess
  (pps ppx_deriving.show))
 (libraries dde))

(toplevel
 (name toplevel)
 (libraries utop dde))

(alias
 (name distributables)
 (deps interpreter.bc toplevel.exe))

(rule
 (target version.ml)
 (deps (universe))
 (action
  (progn
   (run chmod +x %{project_root}/scripts/gen_version.sh)
   (run %{project_root}/scripts/gen_version.sh))))
