(library
 (name dinterp)
 (public_name dde.dinterp)
 (preprocess
  (pps ppx_deriving.show ppx_jane))
 (modules debugutils ast interp lexer parser pp)
 (libraries core logs logs.fmt))

(ocamllex
 (modules lexer))

(menhir
 (modules parser))

; (executable
;  (name main)
;  (modes byte)
;  (modules main)
;  (libraries interp))

(toplevel
 (name toplevel)
 (libraries utop dinterp))

; (alias
;  (name distributables)
;  (deps main.bc toplevel.exe))
