(library
 (name interp)
 (public_name dde.interp)
 (preprocess
  (pps ppx_deriving.show ppx_jane))
 (modules lexer parser ast lib pp debug_utils exns)
 (libraries core))

(ocamllex
 (modules lexer))

(menhir
 (modules parser))

(executable
 (name main)
 (modes byte)
 (modules main)
 (libraries interp))
