(library
 (name pa)
 (public_name dde.pa)
 (preprocess
  (pps bisect_ppx ppx_deriving.show ppx_let ppx_jane))
 (instrumentation
  (backend bisect_ppx --bisect-file _build/bisect))
 (modules lib utils solver simplifier graph debug_utils exns)
 (libraries dde.interp hashset core z3 logs logs.fmt))

(executable
 (name main)
 (modes byte)
 (modules main)
 (libraries pa))
