(library
 (name program_analysis)
 (public_name dde.program_analysis)
 (preprocess
  (pps bisect_ppx ppx_let ppx_deriving.show ppx_jane))
 (instrumentation
  (backend bisect_ppx --bisect-file _build/bisect))
 (modules lib grammar solver utils debugutils)
 (libraries dde.interpreter hashset core z3))

(executable
 (name main)
 (modes byte)
 (modules main)
 (libraries program_analysis))
