(library
 (name pa)
 (public_name dde.pa)
 (preprocess
  (pps bisect_ppx ppx_deriving.show ppx_let ppx_jane landmarks-ppx --auto))
 (instrumentation
  (backend bisect_ppx --bisect-file _build/bisect))
 (instrumentation
  (backend landmarks --auto))
 (modules lib grammar solver simplifier utils debugutils exns logging)
 (libraries dde.interp hashset core z3 logs logs.fmt))

(executable
 (name main)
 (modes byte)
 (modules main)
 (libraries pa))
