(test
 (name tests)
 (modules test_cases tests pbt bench utils)
 (libraries
  core
  core_bench
  core_unix.command_unix
  dde.interp
  dde.dinterp
  dde.pa
  dde.simple_pa
  dde.display_pa
  fbdk.fb
  ounit2
  landmarks)
 (preprocess
  (pps landmarks-ppx --auto))
 (instrumentation
  (backend landmarks --auto)))

; (rule
;  ;  (alias test)
;  (target adapted2.ml)
;  (deps progs/adapted2.ml)
;  (action
;   (copy# %{deps} %{target})))

(data_only_dirs progs)
